# budget-balancer

./: ACCESSIBILITY_AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_AUDIT.md  CODE_QUALITY_SUMMARY.md  PR-REVIEW-RESPONSE.md  README.md  REVIEW_COMPLETE.md  SECURITY.md  TESTING.md  WEEK2-SUMMARY.md  code-review.md  in-depth-bug-review.md  index.html  package.json  tailwind.config.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial_schema.sql  002_add_standalone_indexes.sql  003_add_column_mappings_updated_at.sql
src-tauri/src/: constants.rs  errors.rs  lib.rs  main.rs  utils.rs
src-tauri/src/commands/: account_commands.rs  analytics_commands.rs  category_commands.rs  category_rule_commands.rs  csv_commands.rs  debt_commands.rs  mod.rs  transaction_commands.rs
src-tauri/src/db/: categories_repo.rs  debts_repo.rs  init.rs  mod.rs  seed.rs  setup.rs  transactions_repo.rs
src-tauri/src/models/: account.rs  category.rs  category_rule.rs  column_mapping.rs  debt.rs  mod.rs  spending_target.rs  transaction.rs
src-tauri/src/services/: avalanche_calculator.rs  categorizer.rs  csv_parser.rs  duplicate_detector.rs  interest_calculator.rs  mod.rs  payment_scheduler.rs  snowball_calculator.rs  spending_aggregator.rs  target_tracker.rs  transaction_importer.rs  trends_calculator.rs
src-tauri/src/utils/: rate_limiter.rs
src-tauri/tests/: integration_tests.rs
src-tauri/tests/integration/: fixtures.rs  mod.rs  test_account_commands.rs  test_categorize.rs  test_category_commands.rs  (+15 more)
(+49 files in other folders)
