[package]
name = "budget-balancer"
version = "0.1.0"
description = "Budget Balancer - Debt Management & Spending Insights"
authors = ["dwalleck"]
edition = "2021"

[lib]
name = "budget_balancer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
dirs = "5.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
